# clausemate

./: .coverage.TU-laptop.36460.XAlLjNlx  .coverage.TU-laptop.36460.XPIilwyx  .dockerignore  .env.example  .gitignore  .gitignore (conflicted copy 2025-07-24 014939)  .gitmodules  .pre-commit-config.yaml  .pylintrc  4tsv_analysis_specification.md  4tsv_compatibility_report.md  AI_AGENT_PROMPT.md  AI_AGENT_PROMPT_CLEAN.md  CHANGELOG.md  CONFIG_CONSOLIDATION_COMPLETE.md  CONSTRUCTIVE_REVIEW.md  CONTRIBUTING.md  DATA_SOURCE_CONFIGURATION.md  DOCKER_README.md  Dockerfile  Dockerfile.dev  IMPORT_REFACTORING_SUMMARY.md  MULTI_FILE_PROCESSING_DOCUMENTATION.md  Makefile  PHASE2_COMPLETION_REPORT.md  PHASE2_PROGRESS_SUMMARY.md  PRECOMMIT_ENHANCEMENT.md  PRIVATE_REPO_SETUP.md  PROJECT_ORGANIZATION.md  PYLINT_README.md  QUICK_DATA_SETUP.md  README.md  README_clause_mates_export.md  REORGANIZATION_SUMMARY.md  REPRODUCIBILITY.md  ROADMAP.md  SETUP_PRIVATE_REPO_INSTRUCTIONS.md  TEST_COVERAGE_IMPROVEMENT_PLAN.md  TEST_COVERAGE_IMPROVEMENT_PLAN_PHASE2.md  TEST_COVERAGE_QUICK_REFERENCE.md  (+63 more)
.binder/: postBuild
.github/: copilot-instructions.md
.github/workflows/: coverage.yml  pylint.yml  reproducibility.yml
analysis/: analyze_4tsv_detailed.py  analyze_column_mapping.py
archive/: CODE_ORGANIZATION_PROPOSAL.md  CONFIG_CONSOLIDATION_COMPLETE.md  MODERNIZATION_COMPLETE.md  NOX_IMPLEMENTATION_COMPLETE.md  PHASE2_COMPLETE_IMPLEMENTATION_REPORT.md  REORGANIZATION_COMPLETE.md  REORGANIZATION_PLAN.md
archive/phase1/: README.md  README_clause_mates_export.md  clause_mates_complete.py  config.py  exceptions.py  pronoun_classifier.py  utils.py
archive/phase_comparison/: PHASE_COMPARISON_SUMMARY.md  analyze_differences.py  analyze_differences_with_md.py  compare_phases.py  comprehensive_analysis_report.md  phase2_improvement_plan.md  phase_difference_analysis.md  verify_first_words.py  verify_pronoun_coref_ids.py
archive/planning_docs/: PHASE2_COMPLETION_REPORT.md  phase2_completion_plan.md
config/: .markdownlint.json  .pre-commit-config.yaml  environment.yml  pytest.ini  requirements-dev-docker.txt  requirements-dev.txt
data/: README.md
data/input/: .gitkeep  FORMAT_OVERVIEW.md
data/output/: .gitkeep  phase_comparison_report.txt  phase_comparison_results.json  phase_difference_analysis_20250723_232703.md  phase_difference_analysis_20250723_232908.md
docker/: .dockerignore.dev  DOCKER_README.html  DOCKER_README.md  Dockerfile  Dockerfile.dev  docker-compose.dev.yml  docker-compose.yml
docs/: 4tsv_analysis_specification.md  4tsv_compatibility_report.md  ARCHITECTURE.html  ARCHITECTURE.md  CROSS_SENTENCE_ANALYSIS_REPORT.md  MULTI_FILE_PROCESSING_DOCUMENTATION.md  PHASE2_COMPLETE_IMPLEMENTATION_REPORT.md  README.md  TESTING_FRAMEWORK_IMPROVEMENT_REPORT.md  TESTING_PROCEDURES_AND_STANDARDS.md  TYPE_STYLE_GUIDE.md  comprehensive_integration_analysis.md  cross_chapter_coreference_analysis_spec.md  data_input_enhancement_plan.md  dockerplan.md  hyp.txt  notes.txt  project_flow  task.md  test_failure_fix_plan.md  test_fix_architecture.md  unified_multi_file_processing_plan.md  unified_multi_file_processing_plan_updated.md  webanno_schema_implementation_plan.md
docs/project-plans/: ROADMAP.md  TODO.md  dockerplan.md  updated_implementation_plan.md
notebooks/: demo.ipynb  demo_analysis.ipynb  demo_executed.ipynb
phase1/: README.md  README_clause_mates_export.md  clause_mates_complete.py
phase_comparison/: PHASE_COMPARISON_SUMMARY.md  analyze_differences.py  analyze_differences_with_md.py  compare_phases.py  phase_comparison_report.txt  phase_comparison_results.json  phase_difference_analysis.md
scripts/: analyze_data_quality_issues.py  enhanced_cross_chapter_analysis.py  generate_advanced_analysis.py  generate_advanced_analysis_fixed.py  generate_advanced_analysis_simple.py  generate_visualizations.py  improve_cross_chapter_visualization.py  load_env.py  run_enhanced_multi_file_analysis.py  run_multi_file_analysis.py  setup_data_source.py  verify_data_quality_fix.py
src/: __init__.py  __main__.py  benchmark.py  config.py  exceptions.py  main.py  pronoun_classifier.py  run_phase2.py  utils.py  verify_phase2.py
src/analyzers/: __init__.py  base.py
src/data/: __init__.py  models.py  versioning.py
src/extractors/: __init__.py  (+5 more)
tests/: __init__.py  conftest.py  test_4tsv_processing.py  test_adaptive_parser.py  test_advanced_analysis_features.py  test_all_chapters.py  test_analyzers.py  test_benchmark.py  test_coreference_extractor.py  test_coverage.py  test_cross_chapter_coreference.py  test_cross_chapter_visualization.py  test_cross_file_coreference_resolver.py  test_data_source_loader.py  test_enhanced_output_system.py  test_env_loader.py  test_incomplete_format_parser.py  test_interactive_visualizer.py  test_multi_file_batch_processor.py  test_phase2_components.py  test_phrase_extractor.py  test_preamble_parser.py  test_pronoun_extractor.py  test_run_phase2.py  test_schema_aware_parser.py  test_tsv_parser.py  test_unified_sentence_manager.py  test_utils.py  test_verify_phase2.py  test_versioning.py  test_visualization.py
tools/: README.md  analyze_results.py  check_duplicates.py  check_file_format.py  compare_outputs.py  create_demo_notebook.py  render_arch_doc.py  setup_dev_environment.py  test_environment.py
(+87 files in other folders)
